# ResumeIQ-AI

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  constants.py  docx_parser.py  extractor.py  parser.py  pdf_parser.py  regex_patterns.py  skills.py
pages/: upload_resume.py
rag/: chatbot.py  chunker.py  embeddings.py  retriever.py  vector_store.py
services/: gemini_service.py  parser.py  prompts.py
utils/: helpers.py
