[project]
name = "resumeiq-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.11.0",
    "keras>=3.15.0",
    "matplotlib>=3.11.0",
    "nltk>=3.10.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "plotly>=6.9.0",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "spacy>=3.8.14",
    "streamlit>=1.59.2",
    "tensorflow>=2.21.0",
]
